--- a/css/cinema.css
+++ b/css/cinema.css
@@ -3,7 +3,8 @@ body {
     background: #000;
     margin: 0;
     padding: 0;
-    font-family: 'Instrument Sans', sans-serif;
+    font-family: 'Arial';
+    font-weight: 100;
     position: relative;
     overflow: hidden;
     opacity: 0;
@@ -162,8 +163,9 @@ body.video-playing::before {
     color: #FEC307;
     font-family: 'Arial';
     font-size: 1.5rem;
+    font-weight: 100;
     font-style: italic;
-    letter-spacing: -0.03em;
+    letter-spacing: -0.04em;
     line-height: 1.8;
     text-shadow: 0 0 10px rgba(255, 215, 0, 0.2), 0 2px 8px rgba(0, 0, 0, 0.9);
     opacity: 0;
