--- a/css/headspace.css
+++ b/css/headspace.css
@@ -12,7 +12,8 @@ body {
     background: #000;
     margin: 0;
     padding: 0;
-    font-family: 'Instrument Sans', sans-serif;
+    font-family: 'Arial';
+    font-weight: 100;
     position: relative;
     overflow: auto !important;
     height: auto !important;
@@ -243,7 +244,7 @@ body::after {
     color: #FEC307;
     font-family: 'Arial';
     font-size: 1.5rem;
-    font-weight: 100;
+    font-weight: lighter;
     font-style: italic;
     letter-spacing: -0.03em;
     line-height: 1.8;
